<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="title_add_real_estate">Add Real Estate</string>
    <string name="title_edit_real_estate">Edit Real Estate</string>
    <string name="title_properties_map">Properties Map</string>
    <string name="menu_back">Back</string>
    <string name="menu_search">Search</string>
    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_loan_calculator">Loan Calculator</string>
    <string name="menu_map">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="hint_type">Type (e.g. Apartment, House)</string>
    <string name="hint_city">City</string>
    <string name="hint_postcode">Postal Code</string>
    <string name="hint_price">Price (USD)</string>
    <string name="hint_description">Description</string>
    <string name="hint_surface">Surface</string>
    <string name="hint_rooms">Rooms</string>
    <string name="hint_bathrooms">Baths</string>
    <string name="hint_bedrooms">Beds</string>
    <string name="hint_address">Full Address</string>
    <string name="hint_add_date">Creation Date *</string>
    <string name="hint_agent">Real Estate Agent</string>
    <string name="label_poi">Points of Interest</string>
    <string name="poi_school">School</string>
    <string name="poi_station">Station</string>
    <string name="poi_shops">Shops</string>
    <string name="checkbox_sold">Mark as Sold</string>
    <string name="label_photos">Photos (at least 1 required)</string>
    <string name="btn_validate">Validate and Add</string>
    <string name="desc_property_photo">Property Photo</string>
    <string name="label_description">Description</string>
    <string name="msg_property_added">Property added successfully</string>
    <string name="msg_property_updated">Property updated successfully</string>
    <string name="msg_check_inputs">Please check your inputs</string>
    <string name="msg_error_file">Error creating file</string>
    <string name="dialog_add_photo">Add Photo</string>
    <string name="dialog_take_photo">Take Photo</string>
    <string name="dialog_choose_gallery">Choose from Gallery</string>
</resources>
