<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/back"
        android:title="@string/menu_back"
        android:icon="@drawable/baseline_arrow_back_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_loan_calc"
        android:title="@string/menu_loan_calculator"
        android:icon="@drawable/baseline_attach_money_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"/>

    <item
        android:id="@+id/add"
        android:title="@string/menu_add"
        android:icon="@drawable/baseline_add_24"
        app:showAsAction="ifRoom"/>

</menu>
